tests/baselines/reference/importAssertionNonstring.errors.txt
mod.mts(5,53): error TS1005: ',' expected.
mod.mts(5,54): error TS1005: ':' expected.
mod.mts(5,55): error TS1005: ',' expected.
mod.mts(5,56): error TS1005: ':' expected.
mod.mts(5,57): error TS1005: ',' expected.
mod.mts(7,8): error TS1005: ':' expected.
mod.mts(7,10): error TS1005: ',' expected.
mod.mts(7,13): error TS1005: ':' expected.
mod.mts(7,20): error TS1005: ',' expected.
mod.mts(7,25): error TS1005: ':' expected.
mod.mts(7,37): error TS1005: ',' expected.
mod.mts(7,44): error TS1005: ':' expected.
mod.mts(7,45): error TS1005: ',' expected.
mod.mts(7,53): error TS1005: ',' expected.
mod.mts(7,56): error TS1005: ':' expected.
mod.mts(9,54): error TS1005: ',' expected.
mod.mts(9,60): error TS1128: Declaration or statement expected.
mod.mts(11,68): error TS1005: ',' expected.
mod.mts(11,77): error TS1005: ':' expected.
mod.mts(11,78): error TS1005: ',' expected.


==== mod.mts (20 errors) ====
    import * as thing1 from "./mod.mjs" assert {field: 0};
    
    import * as thing2 from "./mod.mjs" assert {field: `a`};
    
    import * as thing3 from "./mod.mjs" assert {field: /a/g};
                                                        ~
!!! error TS1005: ',' expected.
                                                         ~
!!! error TS1005: ':' expected.
                                                          ~
!!! error TS1005: ',' expected.
                                                           ~
!!! error TS1005: ':' expected.
                                                            ~
!!! error TS1005: ',' expected.
    
    import * as thing4 from "./mod.mjs" assert {field: ["a"]};
           ~
!!! error TS1005: ':' expected.
             ~~
!!! error TS1005: ',' expected.
                ~~~~~~
!!! error TS1005: ':' expected.
                       ~~~~
!!! error TS1005: ',' expected.
                            ~~~~~~~~~~~
!!! error TS1005: ':' expected.
                                        ~~~~~~
!!! error TS1005: ',' expected.
                                               ~
!!! error TS1005: ':' expected.
                                                ~~~~~
!!! error TS1005: ',' expected.
                                                        ~~~
!!! error TS1005: ',' expected.
                                                           ~
!!! error TS1005: ':' expected.
    
    import * as thing5 from "./mod.mjs" assert {field: { a: 0 }};
                                                         ~
!!! error TS1005: ',' expected.
                                                               ~
!!! error TS1128: Declaration or statement expected.
    
    import * as thing6 from "./mod.mjs" assert {type: "json", field: 0..toString()}
                                                                       ~
!!! error TS1005: ',' expected.
                                                                                ~
!!! error TS1005: ':' expected.
                                                                                 ~
!!! error TS1005: ',' expected.